examples/datalog/14_aggregations/25_percentile_sim.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_percentile
Knowledge graph 'test_percentile' created.
Switched to knowledge graph: test_percentile
> .kg use test_percentile
Switched to knowledge graph: test_percentile
> +scores[(1, 10), (2, 20), (3, 30), (4, 40), (5, 50), (6, 60), (7, 70), (8, 80), (9, 90), (10, 100)].
Inserted 10 fact(s) into 'scores'.
> +total_count(<COUNT:S>) :- scores(_, S).
Script error: Parse error: Invalid term: '<COUNT:S>'
